--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -7,21 +7,21 @@
 <div class="row">
   <div class="col-sm-8">
 
-    <div epoch-live-line
+    <epoch-live-line
       data-history="lineHistory"
       data-stream="lineStream"
 
       chart-height="200"
-    ></div>
+    ></epoch-live-line>
 
   </div>
   <div class="col-sm-4">
 
-    <div epoch-gauge
+    <epoch-gauge
       class="gauge-small"
       data-stream="gaugeValue"
       chart-height="135"
-    ></div>
+    ></epoch-gauge>
 
   </div>
 </div>
