--- a/cdap-web-app/client/index.html
+++ b/cdap-web-app/client/index.html
@@ -1297,15 +1297,31 @@
     </div>
     <div id="panels">
       <div class="panel">
-        <div>
-          <div class="panel-title center-align beta-info-font">
-            {{#if showLogsMessage}}
-              <div>
-                <span> To see more details about the job, please see the <span class="logs-link" {{action "logsLinkHandler" on="click"}}> logs </span> </span>
+        <div class="sparks-metrics clearfix chart">
+            <div class="spark-metrics-item">
+              <div class="spark-icon spark-metrics-block">
+                <div class="info-window">
+                  <div class="metrics-phase">BLOCKS</div>
+                  <div class="mapper-icon"></div>
+                  <div class="metric-row">{{model.metricsData.blockRemainingMemory}}MB Remaining</div>
+                  <div class="metric-row">{{model.metricsData.blockMaxMemory}}MB Max Available</div>
+                  <div class="metric-row">{{model.metricsData.blockUsedMemory}}MB Used</div>
+                  <div class="metric-row">{{model.metricsData.blockDiskSpaceUsed}}MB Used on disk</div>
+                </div>
               </div>
-            {{/if}}
-            <div>Beta Feature: Additional components will be added in a future release. </div>
-          </div>
+            </div>
+            <div class="spark-metrics-item">
+              <div class="spark-icon spark-metrics-scheduler">
+                <div class="info-window">
+                  <div class="metrics-phase">SCHEDULER</div>
+                  <div class="reducer-icon"></div>
+                  <div class="metric-row">{{model.metricsData.schedulerActiveJobs}} Active Jobs</div>
+                  <div class="metric-row">{{model.metricsData.schedulerAllJobs}} Total Jobs</div>
+                  <div class="metric-row">{{model.metricsData.schedulerFailedStages}} Failed Stages</div>
+                  <div class="metric-row">{{model.metricsData.schedulerWaitingStages}} Waiting stages</div>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </div>
