point 'query' sidebar link to dataexplore

--- a/cdap-web-app/client/index.html
+++ b/cdap-web-app/client/index.html
@@ -112,7 +112,7 @@
           <span class="left-nav-icon"></span>
 
           Store</a></li>
-        <li><a class="nav-link nav-queries" id="nav-queries" href="#/procedures">
+        <li><a class="nav-link nav-queries" id="nav-queries" href="#/dataexplore/query">
           <span class="left-nav-icon"></span>
 
           Query</a></li>
