CDAP-735: Spark metrics redesign

--- a/cdap-web-app/client/index.html
+++ b/cdap-web-app/client/index.html
@@ -1294,19 +1294,19 @@
           <div class="spark-metrics-stages">
             <div class="title-stage">STAGES</div>
             <div id="stage-line" class="stage-status-line">
-              <div {{bindAttr style="model.metricsData.schedulerRunningLineSize"}} class="running">
+              <div {{bindAttr style="model.schedulerRunningLineSize"}} class="running">
                 <div>{{model.metricsData.schedulerRunningStages}}</div>
                 <div>
                   <div class="bubble-running"></div>
                 </div>
               </div>
-              <div {{bindAttr style="model.metricsData.schedulerFailedLineSize"}} class="failed">
+              <div {{bindAttr style="model.schedulerFailedLineSize"}} class="failed">
                 <div>{{model.metricsData.schedulerFailedStages}}</div>
                 <div>
                   <div class="bubble-failed"></div>
                 </div>
               </div>
-              <div {{bindAttr style="model.metricsData.schedulerWaitingLineSize"}} class="waiting">
+              <div {{bindAttr style="model.schedulerWaitingLineSize"}} class="waiting">
                 <div>{{model.metricsData.schedulerWaitingStages}}</div>
                 <div>
                   <div class="bubble-waiting"></div>
