--- a/cdap-web-app/client/index.html
+++ b/cdap-web-app/client/index.html
@@ -2259,5 +2259,13 @@
     </div>
   </script>
 
+  <script type="text/x-handlebars" data-template-name="SparkMetricsProgressBar">
+    <div class="progress stage-status-line">
+      <div data-toggle="tooltip" data-placement="top" title="Running" class="progress-bar running"></div>
+      <div data-toggle="tooltip" data-placement="bottom" title="Failed" class="progress-bar failed"></div>
+      <div data-toggle="tooltip" data-placement="top" title="Waiting" class="progress-bar waiting"></div>
+    </div>
+  </script>
+
 </body>
 </html>
