--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 </head>
 <body ng-controller="BodyCtrl" ng-class="bodyClass">
 
-    <header class="navbar navbar-default navbar-fixed-top">
+    <header class="navbar navbar-inverse navbar-fixed-top">
       <div class="container" role="navigation" my-navbar></div>
     </header>
 
