--- a/app/directives/navbar/dropdown.html
+++ b/app/directives/navbar/dropdown.html
@@ -22,7 +22,7 @@
     themes
   </li>
 
-  <li role="presentation" ng-repeat="it in theme.list()" ng-class="{disabled:it==theme.current}">
+  <li role="presentation" ng-repeat="it in theme.list()">
     <a role="menuitem" href="" ng-click="theme.set(it)">
       <span class="fa" ng-class="it==theme.current ? 'fa-dot-circle-o' : 'fa-circle-o'"></span>
       <span ng-bind="{cdap:'CDAP', default:'Bootstrap'}[it]"></span>
