add cdap searchbar

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
 <body ng-controller="BodyCtrl" ng-class="bodyClass">
 
     <header class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container" role="navigation" my-navbar></div>
+      <div role="navigation" class="container" my-navbar></div>
+      <div role="search" my-searchbar></div>
     </header>
 
     <main class="container">
