foo kitchen sink

--- a/app/directives/searchbar/searchbar.html
+++ b/app/directives/searchbar/searchbar.html
@@ -7,13 +7,15 @@
     </div>
     <div class="col-xs-9 text-right">
       <form class="form-inline">
-        <div class="form-group">
+        <div class="input-group">
           <input type="text" class="form-control" placeholder="Search" disabled>
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-default">
+              <span class="fa fa-search"></span>
+              <span class="sr-only">Submit</span>
+            </button>
+          </span>
         </div>
-        <button type="submit" class="btn btn-default" disabled>
-          <span class="fa fa-search"></span>
-          <span class="sr-only">Submit</span>
-        </button>
       </form>
     </div>
   </div>
