--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -42,11 +42,11 @@
   <div class="col-lg-6">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Panel title</h3>
+      <h3 class="panel-title">Data</h3>
     </div>
     <div class="panel-body">
       <div ng-repeat="app in apps">
-        <a ui-sref="applications.list({namespace: 'ns1'})">
+        <a ui-sref="apps.list({namespace: 'ns1'})">
           <h3 ng-bind="app.name">  </h3>
           <div ng-bing="app.description"> </div>
         </a>
@@ -58,11 +58,11 @@
   <div class="col-lg-6">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Panel title</h3>
+      <h3 class="panel-title">Apps</h3>
     </div>
     <div class="panel-body">
       <div ng-repeat="app in apps">
-        <a ui-sref="applications.list({namespace: 'ns1'})">
+        <a ui-sref="apps.list({namespace: 'ns1'})">
         <h3 ng-bind="app.name">  </h3>
         <div ng-bing="app.description"> </div>
         </a>
