--- a/app/features/dashboard/dashboard.html
+++ b/app/features/dashboard/dashboard.html
@@ -4,14 +4,31 @@
 
 <div class="row">
 
-  <div class="col-sm-3" ng-repeat="i in [1,2,3,4]">
+  <div class="col-sm-4"
+    ng-repeat="column in columns"
+    ng-model="column.items"
+    as-sortable="dragdrop">
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="panel panel-default"
+      ng-repeat="item in column.items"
+      as-sortable-item>
+
+      <div class="panel-heading" as-sortable-item-handle>
+        <span class="badge">{{item}}</span>
+        This is a header
+      </div>
+
+      <div class="panel-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.</p>
+      </div>
+
+      <div class="panel-footer">
+        This is a footer
+      </div>
+    </div>
 
   </div>
 
