--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Cask Data Application Platform">
     <base href="/">
-
     <link rel="stylesheet" type="text/css" href="/assets/bundle/lib.css" />
     <link rel="stylesheet" type="text/css" href="/assets/bundle/app.css" />
 </head>
