when securityEnabled is false, automatically log on as admin

--- a/app/directives/navbar/dropdown.html
+++ b/app/directives/navbar/dropdown.html
@@ -37,8 +37,8 @@
     </a>
   </li>
 
-  <li role="presentation" ng-show="currentUser">
-    <a role="menuitem" tabindex="-1" href="" ng-click="logout()">
+  <li role="presentation" ng-show="currentUser" ng-class="{disabled:!securityEnabled}">
+    <a role="menuitem" tabindex="-1" href="" ng-click="securityEnabled && logout()">
       <span class="fa fa-sign-out"></span>
       Log out
     </a>
