--- a/app/directives/navbar/navbar.html
+++ b/app/directives/navbar/navbar.html
@@ -6,7 +6,7 @@
     <span class="icon-bar"></span>
   </button>
   <a class="navbar-brand" href="/">
-     <span>CDAP</span>
+     <strong>CDAP</strong>
   </a>
 </div>
 <div class="collapse navbar-collapse" ng-class="{in:navbarCollapsed}">
